# redactable-blockchain

./: README.md
distributedChameleonHash/: Cargo.toml
distributedChameleonHash/intergration_test/: Cargo.toml
distributedChameleonHash/intergration_test/src/node/: add_node.sh  ch.rs  ch.txt  ch_new.txt  mod.rs  start_all.sh  update_proxy_ip.sh
distributedChameleonHash/intergration_test/src/node/node1/: keypair.txt  node1.rs  pk_share.txt
distributedChameleonHash/intergration_test/src/node/node1/config/config_file/: node_config.json
distributedChameleonHash/intergration_test/src/node/node2/: mod.rs  node2.rs
distributedChameleonHash/intergration_test/src/node/node2/config/config_file/: node_config.json
distributedChameleonHash/intergration_test/src/node/node3/: mod.rs  node3.rs
distributedChameleonHash/intergration_test/src/node/node3/config/config_file/: log4rs.yaml  node_config.json
distributedChameleonHash/intergration_test/src/node/node4/: node4.rs
distributedChameleonHash/intergration_test/src/node/node4/config/config_file/: node_config.json
distributedChameleonHash/intergration_test/src/proxy/: proxy_node.rs
distributedChameleonHash/intergration_test/src/proxy/config/config_file/: proxy_config.json
distributedChameleonHash/message/: Cargo.toml
distributedChameleonHash/message/src/: common_msg.rs
distributedChameleonHash/message/src/node/: common_msg.rs  keygen_msg.rs  mod.rs  setup_msg.rs
distributedChameleonHash/message/src/proxy/: common_msg.rs  keygen_msg.rs  mod.rs  setup_msg.rs
distributedChameleonHash/node/: Cargo.toml
distributedChameleonHash/node/src/: node.rs
distributedChameleonHash/node/src/config/: config.rs
distributedChameleonHash/proxy/: Cargo.toml
distributedChameleonHash/proxy/src/: lib.rs  proxy.rs
keyJointGeneration/: Cargo.toml
keyJointGeneration/cl_encrypt/: Cargo.toml  build.rs
keyJointGeneration/cl_encrypt/src/cl/: clwarpper.rs
keyJointGeneration/intergration_test/: start_communication.sh
keyJointGeneration/intergration_test/src/: lib.rs
keyJointGeneration/intergration_test/src/node/: add_node.sh  mod.rs  update__threshold.sh  update_node_ip.sh  update_proxy_ip.sh
keyJointGeneration/intergration_test/src/node/node1/: node1.rs  pk_share.txt
keyJointGeneration/intergration_test/src/node/node1/config/config_file/: node_config.json
keyJointGeneration/intergration_test/src/node/node2/: node2.rs
keyJointGeneration/intergration_test/src/node/node2/config/config_file/: node_config.json
keyJointGeneration/intergration_test/src/node/node3/: node3.rs
keyJointGeneration/intergration_test/src/node/node3/config/config_file/: node_config.json
keyJointGeneration/intergration_test/src/node/node4/: mod.rs  node4.rs
keyJointGeneration/intergration_test/src/node/node4/config/config_file/: log4rs.yaml  node_config.json
keyJointGeneration/intergration_test/src/proxy/: proxy_node.rs
keyJointGeneration/intergration_test/src/proxy/config/config_file/: proxy_config.json
keyJointGeneration/message/: Cargo.toml
keyJointGeneration/message/src/: lib.rs  params.rs
keyJointGeneration/message/src/node/: common_msg.rs  keygen_msg.rs  setup_msg.rs
keyJointGeneration/message/src/proxy/: common_msg.rs  keygen_msg.rs  setup_msg.rs
keyJointGeneration/node/: Cargo.toml
keyJointGeneration/node/src/: main.rs  node.rs
keyJointGeneration/node/src/config/: config.rs
keyJointGeneration/node/src/gs_tbk_scheme/: keygen_phase.rs  mod.rs  setup_phase.rs
keyJointGeneration/proxy/: Cargo.toml
keyJointGeneration/proxy/src/: lib.rs  main.rs  proxy.rs
keyJointGeneration/proxy/src/communication/: communication.rs
keyJointGeneration/proxy/src/gs_tbk_scheme/: keygen_phase.rs  mod.rs  setup_phase.rs
keyJointGeneration/utilities/: Cargo.toml
keyJointGeneration/utilities/src/: lib.rs
keyJointGeneration/utilities/src/code/: code.rs
keyJointGeneration/utilities/src/vss/: vss.rs
keyJointGeneration/utilities/src/zkp/: mod.rs  zkp.rs
(+7 files in other folders)
