[workspace]
members = [
    "message",
    "node",
    "proxy",
    "intergration_test",
    "cl_encrypt",
    "utilities"
]
resolver = "2"

[workspace.dependencies]
message = { path = "./message" }
utilities = {path = "./utilities"}
node = { path = "./node" }
proxy = { path = "./proxy" }
intergration_test = { path = "./intergration_test" }
test ={ path = "./test" }
cl_encrypt ={ path = "./cl_encrypt" }
curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74"}
sha2 = "0.9"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.8"
time = "0.1"
serde_json = "1.0"
num = "0.2"
chrono = "0.4"
crossbeam-channel = "0.5.1"
bincode = "1.3.1"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }