[package]
name = "utilities"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libc = "0.2.151"
libc = "0.2"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
encoding="*"
time = "0.1"
curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74"}
